change accelerator vendor name
Signed-off-by: Wu, Gangsheng <gangsheng.wu@intel.com>

--- a/doc/source/train/examples/intel_gaudi/llama_pretrain.ipynb
+++ b/doc/source/train/examples/intel_gaudi/llama_pretrain.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Llama model pre-training on HPU\n",
+    "# Llama model pre-training on Intel Gaudi\n",
     "\n",
-    "In this Jupyter notebook, we will pre-train a [huggyllama/llama-7b](https://huggingface.co/huggyllama/llama-7b) model by using HPU.\n",
+    "In this Jupyter notebook, we will pre-train a [huggyllama/llama-7b](https://huggingface.co/huggyllama/llama-7b) model by using Intel Gaudi.\n",
     "\n",
     "We will use PyTorch for model training and Ray for distributed training.\n",
     "\n",
