--- a/doc/source/train/examples/intel_gaudi/llama.ipynb
+++ b/doc/source/train/examples/intel_gaudi/llama.ipynb
@@ -7,8 +7,8 @@
     "# Fine-tuning Llama-2 Model with Intel Gaudi\n",
     "\n",
     "In this Jupyter notebook, we will:\n",
-    "- fine-tuning a [Llama-2-7b](https://huggingface.co/meta-llama/Llama-2-7b-chat-hf) model by using Intel Gaudi with DDP method\n",
-    "- fine-tuning a [Llama-2-70b](https://huggingface.co/meta-llama/Llama-2-70b-chat-hf) model by using Intel Gaudi with DeepSpeed method\n",
+    "- fine-tuning a [Llama-2-7b](https://huggingface.co/meta-llama/Llama-2-7b-chat-hf) model by using Intel Gaudi accelerators with DDP method\n",
+    "- fine-tuning a [Llama-2-70b](https://huggingface.co/meta-llama/Llama-2-70b-chat-hf) model by using Intel Gaudi accelerators with DeepSpeed method\n",
     "\n",
     "We will use PyTorch for model training and Ray for distributed training. We will use dataset [tatsu-lab/alpaca](https://huggingface.co/datasets/tatsu-lab/alpaca).\n",
     "\n",
