--- a/doc/source/train/examples/intel_gaudi/llama_pretrain.ipynb
+++ b/doc/source/train/examples/intel_gaudi/llama_pretrain.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Llama model pre-training on Intel Gaudi\n",
     "\n",
-    "In this Jupyter notebook, we will pre-train a [huggyllama/llama-7b](https://huggingface.co/huggyllama/llama-7b) model by using Intel Gaudi.\n",
+    "In this Jupyter notebook, we will pre-train a [huggyllama/llama-7b](https://huggingface.co/huggyllama/llama-7b) model by using Intel Gaudi accelerators.\n",
     "\n",
     "We will use PyTorch for model training and Ray for distributed training.\n",
     "\n",
