[Doc] Add troubleshooting guide about pkg_resources module not found error
Resolves: ray-project/ray#46205
Signed-off-by: Chi-Sheng Liu <chishengliu@chishengliu.com>

--- a/doc/source/ray-contribute/docs.ipynb
+++ b/doc/source/ray-contribute/docs.ipynb
@@ -510,6 +510,7 @@
     "2. **Check your environment.** Use `pip list` to check the installed dependencies. Compare them to `docs/requirements-doc.txt`. The documentation build system doesn't have the same dependency requirements as Ray. You don't need to run ML models or execute code on distributed systems in order to build the docs. In fact, it's best to use a completely separate docs build environment from the environment you use to run Ray to avoid dependency conflicts.  When installing requirements, do `pip install -r docs/requirements-doc.txt`. Don't use `-U` because you don't want to upgrade any dependencies during the installation.\n",
     "3. **Ensure a modern version of Python.** The docs build system doesn't keep the same dependency and Python version requirements as Ray. Use a modern version of Python when building docs. Newer versions of Python can be substantially faster than preceding versions. Consult <https://endoflife.date/python> for the latest version support information.\n",
     "4. **Enable breakpoints in Sphinx**. Add -P to the `SPHINXOPTS` in `docs/Makefile` to tell `sphinx` to stop when it encounters a breakpoint, and remove `-j auto` to disable parallel builds. Now you can put breakpoints in the modules you're trying to import, or in `sphinx` code itself, which can help isolate build stubborn build issues.\n",
+    "5. **No module named 'pkg_resources'**. If you see an error like `No module named 'pkg_resources'`, you may need to install `setuptools` with `pip install setuptools`.\n",
     "\n",
     "## Where to go from here?\n",
     "\n",
