--- a/doc/source/train/examples/intel_gaudi/llama_pretrain.ipynb
+++ b/doc/source/train/examples/intel_gaudi/llama_pretrain.ipynb
@@ -33,6 +33,7 @@
     "\n",
     "### Get docker image\n",
     "``` bash\n",
+    "# more available docker image can be found here: https://vault.habana.ai/ui/native/gaudi-docker\n",
     "docker pull vault.habana.ai/gaudi-docker/1.15.1/ubuntu22.04/habanalabs/pytorch-installer-2.2.0:latest\n",
     "```\n",
     "### Run docker image\n",
