--- a/doc/source/data/examples/stablediffusion_batch_prediction.ipynb
+++ b/doc/source/data/examples/stablediffusion_batch_prediction.ipynb
@@ -58,7 +58,7 @@
     "            \"transformers>=4.26.0\",\n",
     "            \"diffusers>=0.13.1\",\n",
     "            \"xformers>=0.0.16\",\n",
-    "            \"torch<2\",\n",
+    "            \"torch==2.3.0\",\n",
     "        ]\n",
     "    }\n",
     ")"
