Fix MCP example name + sidebar navigation (#54636)
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/doc/source/ray-overview/examples/mcp-ray-serve/03 Deploy_single_mcp_stdio_docker_image_with_ray_serve.ipynb
+++ b/doc/source/ray-overview/examples/mcp-ray-serve/03 Deploy_single_mcp_stdio_docker_image_with_ray_serve.ipynb
@@ -22,7 +22,13 @@
     "\n",
     "* **Cloud-native scalability**: Deploy behind load balancers, autoscale horizontally, and integrate with service meshes or API gateways as you would with any other HTTP microservice.\n",
     "\n",
-    "By translating stdio-mode MCP servers into HTTP endpoints with Ray Serve, you gain the flexibility and reliability needed for production-grade deployments—without touching your existing codebase.\n",
+    "By translating stdio-mode MCP servers into HTTP endpoints with Ray Serve, you gain the flexibility and reliability needed for production-grade deployments—without touching your existing codebase. The following architecture diagram illustrates deploying a MCP Docker image with Ray Serve:\n",
+    "\n",
+    "<img\n",
+    "  src=\"https://agent-and-mcp.s3.us-east-2.amazonaws.com/mcp/diagrams/single_mcp_docker_ray_serve.png\"\n",
+    "  alt=\"Deploy a Single MCP Docker Image with Ray Serve Architecture\"\n",
+    "  style=\"width:30%; display: block; margin: 0 auto;\"\n",
+    "/>\n",
     "\n",
     "\n",
     "## Benefits of Ray Serve deployment on Anyscale\n",
