--- a/doc/source/ray-overview/examples/mcp-ray-serve/04 Deploy_multiple_mcp_stdio_docker_images_with_ray_serve.ipynb
+++ b/doc/source/ray-overview/examples/mcp-ray-serve/04 Deploy_multiple_mcp_stdio_docker_images_with_ray_serve.ipynb
@@ -10,7 +10,15 @@
     "\n",
     "Combined with Anyscale, this setup allows you to run production-grade services with minimal overhead, auto-provision compute as needed, and deploy updates without downtime. Whether you're scaling up a single model or routing across many, this pattern provides a clean, extensible path to deployment.\n",
     "\n",
-    "It’s also very easy to add more MCP services—just call build_mcp_deployment for each new service and bind it in the router."
+    "It’s also very easy to add more MCP services—just call build_mcp_deployment for each new service and bind it in the router.\n",
+    "\n",
+    "The following architecture diagram illustrates deploying multiple MCP Docker images with Ray Serve:\n",
+    "\n",
+    "<img\n",
+    "  src=\"https://agent-and-mcp.s3.us-east-2.amazonaws.com/mcp/diagrams/multiple_mcp_docker_to_http_service.png\"\n",
+    "  alt=\"Deploy Multiple MCP Docker Images with Ray Serve Architecture\"\n",
+    "  style=\"width:45%; display: block; margin: 0 auto;\"\n",
+    "/>"
    ]
   },
   {
