consistent 'example curl:' format
Signed-off-by: Aydin Abiar <aydin@anyscale.com>

--- a/doc/source/serve/tutorials/deployment-serve-llm/hybrid-reasoning-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/hybrid-reasoning-llm/notebook.ipynb
@@ -209,7 +209,7 @@
     "\n",
     "You can disable thinking in Qwen-3 by either adding a `/no_think` tag in the prompt or by forwarding `enable_thinking: False` to the vLLM inference engine.  \n",
     "\n",
-    "Example curl with `/no_think`"
+    "Example curl with `/no_think`:"
    ]
   },
   {
@@ -277,7 +277,7 @@
     " \n",
     "You can enable thinking in Qwen-3 by either adding a `/think` tag in the prompt or by forwarding `enable_thinking: True` to the vLLM inference engine.  \n",
     "\n",
-    "Example curl with `/think`"
+    "Example curl with `/think`:"
    ]
   },
   {
