--- a/doc/source/serve/tutorials/deployment-serve-llm/small-size-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/small-size-llm/notebook.ipynb
@@ -112,7 +112,7 @@
     "\n",
     "Your endpoint is available locally at `http://localhost:8000`. You can use a placeholder authentication token for the OpenAI client, for example `\"FAKE_KEY\"`.\n",
     "\n",
-    "**Example curl:**"
+    "Example curl:"
    ]
   },
   {
@@ -134,7 +134,7 @@
    "id": "d623a30f",
    "metadata": {},
    "source": [
-    "**Example Python:**"
+    "Example Python:"
    ]
   },
   {
