--- a/doc/source/serve/tutorials/deployment-serve-llm/reasoning-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/reasoning-llm/notebook.ipynb
@@ -138,7 +138,7 @@
     "**Prerequisites**\n",
     "\n",
     "* Access to GPU compute.\n",
-    "* (Optional) A **Hugging Face token** if using gated models like Meta’s Llama. Store it in `export HF_TOKEN=<YOUR-TOKEN-HERE>`\n",
+    "* (Optional) A **Hugging Face token** if using gated models. Store it in `export HF_TOKEN=<YOUR-TOKEN-HERE>`\n",
     "\n",
     "**Note:** Depending on the organization, you can usually request access on the model's Hugging Face page. For example, Meta’s Llama models approval can take anywhere from a few hours to several weeks.\n",
     "\n",
@@ -194,10 +194,7 @@
     "curl -X POST http://localhost:8000/v1/chat/completions \\\n",
     "  -H \"Authorization: Bearer FAKE_KEY\" \\\n",
     "  -H \"Content-Type: application/json\" \\\n",
-    "  -d '{ \\\n",
-    "        \"model\": \"my-qwq-32B\", \\\n",
-    "        \"messages\": [{\"role\": \"user\", \"content\": \"Pick three random words with 3 syllables each and count the number of R'\\''s in each of them\"}] \\\n",
-    "      }'"
+    "  -d '{ \"model\": \"my-qwq-32B\", \"messages\": [{\"role\": \"user\", \"content\": \"Pick three random words with 3 syllables each and count the number of R'\\''s in each of them\"}] }'"
    ]
   },
   {
@@ -205,7 +202,7 @@
    "id": "942e675c",
    "metadata": {},
    "source": [
-    "Example python:"
+    "Example Python:"
    ]
   },
   {
@@ -270,7 +267,7 @@
     "\n",
     "## Deploy to production with Anyscale services\n",
     "\n",
-    "For production, use Anyscale services to deploy your Ray Serve app on a dedicated cluster without code changes. Anyscale provides scalability, fault tolerance, and load balancing, ensuring resilience against node failures, high traffic, and rolling updates. See [Deploying a medium size LLM](https://docs.ray.io/en/latest/serve/tutorials/deployment-serve-llm/medium-size-llm/README.html#deploy-to-production-with-anyscale-services) for an example with a medium-sized model like the *QwQ-32&nbsp;B* used here.\n",
+    "For production, use Anyscale services to deploy your Ray Serve app on a dedicated cluster without code changes. Anyscale provides scalability, fault tolerance, and load balancing, ensuring resilience against node failures, high traffic, and rolling updates. See [Deploying a medium-sized LLM](https://docs.ray.io/en/latest/serve/tutorials/deployment-serve-llm/medium-size-llm/README.html#deploy-to-production-with-anyscale-services) for an example with a medium-sized model like the *QwQ-32&nbsp;B* used here.\n",
     "\n",
     "---\n",
     "\n",
