--- a/doc/source/serve/tutorials/deployment-serve-llm/small-size-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/small-size-llm/notebook.ipynb
@@ -5,7 +5,7 @@
    "id": "6a51548b",
    "metadata": {},
    "source": [
-    "# Deploy a small size LLM\n",
+    "# Deploy a small-sized LLM\n",
     "\n",
     "A small LLM runs on a single node with 1–2 GPUs, making it fast, inexpensive, and simple to use. It’s ideal for prototyping, lightweight applications, latency-critical use cases, cost-sensitive deployments, and environments with limited resources where efficiency matters more than peak accuracy.\n",
     "\n",
@@ -45,7 +45,7 @@
     "            max_replicas=2,\n",
     "        )\n",
     "    ),\n",
-    "    ### If your model isn't gated, you can skip `hf_token`\n",
+    "    ### If your model isn't gated, you can skip `HF_TOKEN`\n",
     "    # Share your Hugging Face token with the vllm engine so it can access the gated Llama 3\n",
     "    # Type `export HF_TOKEN=<YOUR-HUGGINGFACE-TOKEN>` in a terminal\n",
     "    runtime_env=dict(env_vars={\"HF_TOKEN\": os.environ.get(\"HF_TOKEN\")}),\n",
@@ -95,6 +95,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
+    "export HF_TOKEN=<YOUR-HUGGINGFACE-TOKEN>\n",
     "serve run serve_llama_3_1_8b:app --non-blocking"
    ]
   },
@@ -111,7 +112,7 @@
     "\n",
     "Your endpoint is available locally at `http://localhost:8000`. You can use a placeholder authentication token for the OpenAI client, for example `\"FAKE_KEY\"`.\n",
     "\n",
-    "**Example curl:**"
+    "Example curl:"
    ]
   },
   {
@@ -125,10 +126,7 @@
     "curl -X POST http://localhost:8000/v1/chat/completions \\\n",
     "  -H \"Authorization: Bearer FAKE_KEY\" \\\n",
     "  -H \"Content-Type: application/json\" \\\n",
-    "  -d '{ \\\n",
-    "        \"model\": \"my-llama-3.1-8b\", \\\n",
-    "        \"messages\": [{\"role\": \"user\", \"content\": \"What is 2 + 2?\"}] \\\n",
-    "      }'"
+    "  -d '{ \"model\": \"my-llama-3.1-8b\", \"messages\": [{\"role\": \"user\", \"content\": \"What is 2 + 2?\"}] }'"
    ]
   },
   {
@@ -136,7 +134,7 @@
    "id": "d623a30f",
    "metadata": {},
    "source": [
-    "**Example Python:**"
+    "Example Python:"
    ]
   },
   {
@@ -214,7 +212,7 @@
     "```yaml\n",
     "# service.yaml\n",
     "name: deploy-llama-3-8b\n",
-    "image_uri: anyscale/ray-llm:2.49.0-py311-cu128   # Anyscale Ray Serve LLM image\n",
+    "image_uri: anyscale/ray-llm:2.49.0-py311-cu128 # Anyscale Ray Serve LLM image. Use `containerfile: ./Dockerfile` to use a custom Dockerfile.\n",
     "compute_config:\n",
     "  auto_select_worker_config: true \n",
     "working_dir: .\n",
@@ -387,7 +385,7 @@
     "\n",
     "## Summary\n",
     "\n",
-    "In this tutorial, you deployed a small size LLM with Ray Serve LLM, from development to production. You learned how to configure Ray Serve LLM, deploy your service on your Ray cluster, and how to send requests. You also learned how to monitor your app and common troubleshooting issues."
+    "In this tutorial, you deployed a small-sized LLM with Ray Serve LLM, from development to production. You learned how to configure Ray Serve LLM, deploy your service on your Ray cluster, and how to send requests. You also learned how to monitor your app and common troubleshooting issues."
    ]
   }
  ],
