--- a/doc/source/serve/tutorials/deployment-serve-llm/vision-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/vision-llm/notebook.ipynb
@@ -65,7 +65,7 @@
                 "**Prerequisites**\n",
                 "\n",
                 "* Access to GPU compute.\n",
-                "* (Optional) A **Hugging Face token** if using gated models like Meta’s Llama. Store it in `export HF_TOKEN=<YOUR-TOKEN-HERE>`\n",
+                "* (Optional) A **Hugging Face token** if using gated models. Store it in `export HF_TOKEN=<YOUR-TOKEN-HERE>`\n",
                 "\n",
                 "**Note:** Depending on the organization, you can usually request access on the model's Hugging Face page. For example, Meta’s Llama models approval can take anywhere from a few hours to several weeks.\n",
                 "\n",
@@ -107,7 +107,7 @@
                 "\n",
                 "Your endpoint is available locally at `http://localhost:8000` and you can use a placeholder authentication token for the OpenAI client, for example `\"FAKE_KEY\"`.\n",
                 "\n",
-                "Example cURL with image URL"
+                "Example curl with image URL:"
             ]
         },
         {
@@ -121,20 +121,7 @@
                 "curl -X POST http://localhost:8000/v1/chat/completions \\\n",
                 "  -H \"Authorization: Bearer FAKE_KEY\" \\\n",
                 "  -H \"Content-Type: application/json\" \\\n",
-                "  -d '{ \\\n",
-                "        \"model\": \"my-qwen-VL\", \\\n",
-                "        \"messages\": [ \\\n",
-                "          { \\\n",
-                "            \"role\": \"user\", \\\n",
-                "            \"content\": [ \\\n",
-                "              {\"type\": \"text\", \"text\": \"What do you see in this image?\"}, \\\n",
-                "              {\"type\": \"image_url\", \"image_url\": { \\\n",
-                "                \"url\": \"http://images.cocodataset.org/val2017/000000039769.jpg\" \\\n",
-                "              }} \\\n",
-                "            ] \\\n",
-                "          } \\\n",
-                "        ] \\\n",
-                "      }'"
+                "  -d '{ \"model\": \"my-qwen-VL\", \"messages\": [ { \"role\": \"user\", \"content\": [ {\"type\": \"text\", \"text\": \"What do you see in this image?\"}, {\"type\": \"image_url\", \"image_url\": { \"url\": \"http://images.cocodataset.org/val2017/000000039769.jpg\" }} ] } ] }'"
             ]
         },
         {
