modified examples.yml so the template shows up in the OSS docs
Signed-off-by: JasonLi1909 <jasli1909@gmail.com>

--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "**Anyscale Specific Configuration**\n",
     "\n",
-    "Note: This tutorial is optimized for the Anyscale platform. When running on open source Ray, additional configuration is required. For example, you will need to manually:\n",
+    "Note: This tutorial is optimized for the Anyscale platform. When running on open source Ray, additional configuration is required. For example, you would need to manually:\n",
     "\n",
     "- **Configure your Ray Cluster**: Set up your multi-node environment and manage resource allocation without Anyscale's automation.\n",
     "- **Manage Dependencies**: Manually install and manage dependencies on each node.\n",
@@ -46,9 +46,9 @@
    "source": [
     "## Example Overview\n",
     "\n",
-    "For demonstration purposes, we will integrate Ray Train with FSDP2 using a **Vision Transformer (ViT)** trained on the FashionMNIST dataset. We chose ViT because it has clear, repeatable block structures (transformer blocks) that are ideal for demonstrating FSDP2's sharding capabilities. \n",
+    "For demonstration purposes, this tutorial integrates Ray Train with FSDP2 using a **Vision Transformer (ViT)** trained on the FashionMNIST dataset. ViT was chosen because it has clear, repeatable block structures (transformer blocks) that are ideal for demonstrating FSDP2's sharding capabilities. \n",
     "\n",
-    "While this is a relatively simple example, FSDP's complexity can lead to common challenges during training, such as out-of-memory (OOM) errors. Throughout this guide, we'll address these common issues by providing practical tips for improving performance and reducing memory utilization based on your specific use case. "
+    "While this is a relatively simple example, FSDP's complexity can lead to common challenges during training, such as out-of-memory (OOM) errors. Throughout this guide, these common issues are addressed by providing practical tips for improving performance and reducing memory utilization based on your specific use case. "
    ]
   },
   {
@@ -133,13 +133,13 @@
    "source": [
     "## 2. Define the Training Function\n",
     "\n",
-    "Below is the main training function that orchestrates the FSDP2 training process. In the following sections, we'll implement each of the helper functions used within this training loop.\n",
+    "Below is the main training function that orchestrates the FSDP2 training process. In the following sections, each of the helper functions used within this training loop are implemented.\n",
     "\n",
     "### 2a. GPU Memory Profiling\n",
     "\n",
-    "GPU memory profiling is an useful tool for monitoring and analyzing memory usage during model training. It helps identify bottlenecks, optimize resource allocation, and prevent out-of-memory errors. We configure PyTorch's GPU memory profiler within the training function.\n",
+    "GPU memory profiling is an useful tool for monitoring and analyzing memory usage during model training. It helps identify bottlenecks, optimize resource allocation, and prevent out-of-memory errors. PyTorch's GPU memory profiler is configured within the training function.\n",
     "\n",
-    "In this demo, we configure the profiler to generate a profiling file for each worker accessible from the Anyscale Files tab under cluster storage. To inspect a worker's memory profile, download the corresponding HTML file and open it in your browser. The profiler configuration and export path can be customized within the training function.  For more details on PyTorch's memory profiler, see the [PyTorch blog](https://pytorch.org/blog/understanding-gpu-memory-1/).\n",
+    "In this demo, the profiler is configured to generate a profiling file for each worker accessible from the Anyscale Files tab under cluster storage. To inspect a worker's memory profile, download the corresponding HTML file and open it in your browser. The profiler configuration and export path can be customized within the training function.  For more details on PyTorch's memory profiler, see the [PyTorch blog](https://pytorch.org/blog/understanding-gpu-memory-1/).\n",
     "\n",
     "<div style=\"display: flex; gap: 40px; align-items: flex-start;\">\n",
     "  <div style=\"text-align: center;\">\n",
@@ -150,7 +150,7 @@
     "\n",
     "### 2b. Storage Configuration\n",
     "\n",
-    "In this demo, we use cluster storage to allow for quick iteration and development, but this may not be suitable in production environments or at high scale. In such cases, object storage should be used instead. For more information about how to select your storage type, see the [Anyscale storage configuration docs](https://docs.anyscale.com/configuration/storage)."
+    "In this demo, cluster storage is used to allow for quick iteration and development, but this may not be suitable in production environments or at high scale. In such cases, object storage should be used instead. For more information about how to select your storage type, see the [Anyscale storage configuration docs](https://docs.anyscale.com/configuration/storage)."
    ]
   },
   {
@@ -311,7 +311,7 @@
    "source": [
     "## 3. Model Sharding with FSDP2\n",
     "\n",
-    "PyTorch's `fully_shard` enables sharding at various granularities. At the most granular level, every layer can be sharded, but this increases communication costs between Ray Train workers. Experiment with different sharding granularities to find the optimal balance for your use case. In this demo, we shard only the encoder blocks—the largest layers in the Vision Transformer.\n",
+    "PyTorch's `fully_shard` enables sharding at various granularities. At the most granular level, every layer can be sharded, but this increases communication costs between Ray Train workers. Experiment with different sharding granularities to find the optimal balance for your use case. In this demo, only the encoder blocks are sharded—the largest layers in the Vision Transformer.\n",
     "\n",
     "Beyond sharding granularity, FSDP2 offers several configuration options to optimize performance and mitigate out-of-memory (OOM) errors:\n",
     "\n",
@@ -326,7 +326,7 @@
     "\n",
     "**When to use CPU offloading:**\n",
     "- When GPU memory is constrained\n",
-    "- For very large models that don't fit in GPU memory\n",
+    "- For very large models that do not fit in GPU memory\n",
     "\n",
     "**When not to use CPU offloading:**\n",
     "- When CPU memory is limited (can cause CPU crashes)\n",
@@ -362,11 +362,11 @@
     "  </div>\n",
     "</div>\n",
     "\n",
-    "With `reshard_after_forward=True`, we see that the memory allocated to model parameters drop after the forward step whereas it peaks without `reshard_after_forward=False`. This difference is not significant as we are using a small model where the activations are much larger than the model parmeters. The memory savings are more noticeable in settings with larger models. \n",
+    "With `reshard_after_forward=True`, the memory allocated to model parameters drops after the forward step whereas it peaks without `reshard_after_forward=False`. This difference is not significant as this example uses a small model where the activations are much larger than the model parameters. The memory savings are more noticeable in settings with larger models. \n",
     "\n",
     "### 3c. Mixed Precision\n",
     "\n",
-    "Enabling mixed precision accelerates training and reduces GPU memory usage with minimal accuracy impact. Unlike other distributed approaches like DDP, FSDP2 already maintains high-precision copies of sharded parameters, so mixed precision requires no additional memory overhead. It is also important to note that in this demo, we use PyTorch's `float16` dtype for lower precision computation because we are utilizing older T4 GPUs that do not support the more stable `bfloat16` dtype. `bfloat16` is the more stable option over `float16` as its wider dynamic range avoids the need to ensure loss and gradient values are properly scaled in cases of underflow or overflow.\n",
+    "Enabling mixed precision accelerates training and reduces GPU memory usage with minimal accuracy impact. Unlike other distributed approaches like DDP, FSDP2 already maintains high-precision copies of sharded parameters, so mixed precision requires no additional memory overhead. It is also important to note that in this demo, PyTorch's `float16` dtype is used for lower precision computation because older T4 GPUs are being utilized that do not support the more stable `bfloat16` dtype. `bfloat16` is the more stable option over `float16` as its wider dynamic range avoids the need to ensure loss and gradient values are properly scaled in cases of underflow or overflow.\n",
     "\n",
     "**Benefits of mixed precision with FSDP2:**\n",
     "- Reduced memory usage for activations and intermediate computations\n",
@@ -452,21 +452,21 @@
    "source": [
     "## 4. Distributed Checkpoint Wrapper Setup\n",
     "\n",
-    "We create a checkpointing wrapper using PyTorch's `Stateful` API to simplify distributed checkpoint management. From the PyTorch docs, this basic wrapper handles the complexities of saving and loading FSDP2 model states across multiple workers."
+    "This section creates a checkpointing wrapper using PyTorch's `Stateful` API to simplify distributed checkpoint management. From the PyTorch docs, this basic wrapper handles the complexities of saving and loading FSDP2 model states across multiple workers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class AppState(Stateful):\n",
     "    \"\"\"This is a useful wrapper for checkpointing the Application State. Since this object is compliant\n",
-    "    with the Stateful protocol, PyTorch DCP will automatically call state_dict/load_stat_dict as needed in the\n",
+    "    with the Stateful protocol, PyTorch DCP automatically calls state_dict/load_stat_dict as needed in the\n",
     "    dcp.save/load APIs.\n",
     "\n",
-    "    Note: We take advantage of this wrapper to handle calling distributed state dict methods on the model\n",
+    "    Note: This wrapper is used to handle calling distributed state dict methods on the model\n",
     "    and optimizer.\n",
     "    \"\"\"\n",
     "\n",
@@ -483,12 +483,12 @@
     "        }\n",
     "\n",
     "    def load_state_dict(self, state_dict):\n",
-    "        # sets our state dicts on the model and optimizer, now that we've loaded\n",
+    "        # sets our state dicts on the model and optimizer, now that loading is complete\n",
     "        set_state_dict(\n",
     "            self.model,\n",
     "            self.optimizer,\n",
     "            model_state_dict=state_dict[\"model\"],\n",
-    "            optim_state_dict=state_dict[\"optim\"]\n",
+    "            optim_state_dict=state_dict[\"optim\"],\n",
     "        )\n"
    ]
   },
@@ -496,9 +496,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Loading Distrbuted Model from Checkpoint\n",
+    "## 5. Loading Distributed Model from Checkpoint\n",
     "\n",
-    "Distributed checkpoints can be loaded using `dcp.load`, which automatically handles resharding when the number of workers changes between training runs. This flexibility allows you to resume training with different resource configurations. "
+    "Distributed checkpoints are loaded using `dcp.load`, which automatically handles resharding when the number of workers changes between training runs. This flexibility allows you to resume training with different resource configurations. "
    ]
   },
   {
@@ -588,7 +588,7 @@
    "source": [
     "## 7. Saving Model for Inference\n",
     "\n",
-    "After training completes, we need to save the final model in an unsharded format for inference. This differs from regular checkpointing as it consolidates the model checkpoint into one file that is compatible with `torch.load`. The `get_model_state_dict` function performs an all-gather operation to reconstruct the complete model state on rank 0, which then saves and reports the full model checkpoint."
+    "After training completes, the final model needs to be saved in an unsharded format for inference. This differs from regular checkpointing as it consolidates the model checkpoint into one file that is compatible with `torch.load`. The `get_model_state_dict` function performs an all-gather operation to reconstruct the complete model state on rank 0, which then saves and reports the full model checkpoint."
    ]
   },
   {
@@ -647,7 +647,7 @@
    "source": [
     "## 8. Launching the Distributed Training Job\n",
     "\n",
-    "Now we'll configure and launch the distributed training job using Ray Train's TorchTrainer:"
+    "This section configures and launches the distributed training job using Ray Train's TorchTrainer:"
    ]
   },
   {
@@ -701,7 +701,7 @@
    "source": [
     "## 9. Loading the Trained Model for Inference\n",
     "\n",
-    "After training completes, we can load the saved model for inference on new data. The model is loaded in its unsharded form, ready for standard PyTorch inference."
+    "After training completes, the saved model can be loaded for inference on new data. The model is loaded in its unsharded form, ready for standard PyTorch inference."
    ]
   },
   {
