supressed toctree error by making notebook an orphan and fixed example page positioning
Signed-off-by: JasonLi1909 <jasli1909@gmail.com>

--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -780,6 +780,7 @@
    "language": "python",
    "name": "python3"
   },
+  "orphan": true,
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
