--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -144,7 +144,7 @@
     "<div style=\"display: flex; gap: 40px; align-items: flex-start;\">\n",
     "  <div style=\"text-align: center;\">\n",
     "    <h3>Example Memory Profile</h3>\n",
-    "    <img src=\"images/gpu_memory_profile.png\" width=\"600\"/>\n",
+    "    <img src=\"https://raw.githubusercontent.com/ray-project/ray/master/doc/source/train/examples/pytorch/pytorch-fsdp/images/gpu_memory_profile.png\" width=\"600\"/>\n",
     "  </div>\n",
     "</div>\n",
     "\n",
@@ -335,11 +335,11 @@
     "<div style=\"display: flex; gap: 40px; align-items: flex-start;\">\n",
     "  <div style=\"text-align: center;\">\n",
     "    <h3>Without CPU Offloading</h3>\n",
-    "    <img src=\"images/gpu_memory_profile.png\" width=\"600\"/>\n",
+    "    <img src=\"https://raw.githubusercontent.com/ray-project/ray/master/doc/source/train/examples/pytorch/pytorch-fsdp/images/gpu_memory_profile.png\" width=\"600\"/>\n",
     "  </div>\n",
     "  <div style=\"text-align: center;\">\n",
     "    <h3>With CPU Offloading</h3>\n",
-    "    <img src=\"images/cpu_offload_profile.png\" width=\"600\"/>\n",
+    "    <img src=\"https://raw.githubusercontent.com/ray-project/ray/master/doc/source/train/examples/pytorch/pytorch-fsdp/images/cpu_offload_profile.png\" width=\"600\"/>\n",
     "  </div>\n",
     "</div>\n",
     "\n",
@@ -354,11 +354,11 @@
     "<div style=\"display: flex; gap: 40px; align-items: flex-start;\">\n",
     "  <div style=\"text-align: center;\"> \n",
     "    <h3><code>reshard_after_forward=False</code></h3>\n",
-    "    <img src=\"images/gpu_memory_profile.png\" width=\"600\"/>\n",
+    "    <img src=\"https://raw.githubusercontent.com/ray-project/ray/master/doc/source/train/examples/pytorch/pytorch-fsdp/images/gpu_memory_profile.png\" width=\"600\"/>\n",
     "  </div>\n",
     "  <div style=\"text-align: center;\">\n",
     "    <h3><code>reshard_after_forward=True</code></h3>\n",
-    "    <img src=\"images/reshard_after_forward_memory_profile.png\" width=\"600\"/>\n",
+    "    <img src=\"https://raw.githubusercontent.com/ray-project/ray/master/doc/source/train/examples/pytorch/pytorch-fsdp/images/reshard_after_forward_memory_profile.png\" width=\"600\"/>\n",
     "  </div>\n",
     "</div>\n",
     "\n",
@@ -376,11 +376,11 @@
     "<div style=\"display: flex; gap: 40px; align-items: flex-start;\">\n",
     "  <div style=\"text-align: center;\">\n",
     "    <h3>Without Mixed Precision</h3>\n",
-    "    <img src=\"images/gpu_memory_profile.png\" width=\"600\"/>\n",
+    "    <img src=\"https://raw.githubusercontent.com/ray-project/ray/master/doc/source/train/examples/pytorch/pytorch-fsdp/images/gpu_memory_profile.png\" width=\"600\"/>\n",
     "  </div>\n",
     "  <div style=\"text-align: center;\">\n",
     "    <h3>With Mixed Precision</h3>\n",
-    "    <img src=\"images/mixed_precision_profile.png\" width=\"600\"/>\n",
+    "    <img src=\"https://raw.githubusercontent.com/ray-project/ray/master/doc/source/train/examples/pytorch/pytorch-fsdp/images/mixed_precision_profile.png\" width=\"600\"/>\n",
     "  </div>\n",
     "</div>\n",
     "\n",
@@ -780,7 +780,6 @@
    "language": "python",
    "name": "python3"
   },
-  "orphan": true,
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -792,7 +791,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.11"
-  }
+  },
+  "orphan": true
  },
  "nbformat": 4,
  "nbformat_minor": 2
